# hyper-base-convert

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
hyper_base_convert/: __init__.py  core.py
tests/: test_hyper_base_convert.py
